Packages_2024/llvm-project_20.1.2/llvm/Core.inc

function LLVMInsertBasicBlockInContext(C: TLLVMContextRef; BB: TLLVMBasicBlockRef; Name: pchar): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMInsertBasicBlock(InsertBeforeBB: TLLVMBasicBlockRef; Name: pchar): TLLVMBasicBlockRef; cdecl; external libllvm;
procedure LLVMDeleteBasicBlock(BB: TLLVMBasicBlockRef); cdecl; external libllvm;
procedure LLVMRemoveBasicBlockFromParent(BB: TLLVMBasicBlockRef); cdecl; external libllvm;
procedure LLVMMoveBasicBlockBefore(BB: TLLVMBasicBlockRef; MovePos: TLLVMBasicBlockRef); cdecl; external libllvm;
procedure LLVMMoveBasicBlockAfter(BB: TLLVMBasicBlockRef; MovePos: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetFirstInstruction(BB: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetLastInstruction(BB: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMHasMetadata(Val: TLLVMValueRef): longint; cdecl; external libllvm;
function LLVMGetMetadata(Val: TLLVMValueRef; KindID: dword): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMSetMetadata(Val: TLLVMValueRef; KindID: dword; Node: TLLVMValueRef); cdecl; external libllvm;
function LLVMInstructionGetAllMetadataOtherThanDebugLoc(Instr: TLLVMValueRef; NumEntries: Psize_t): PLLVMValueMetadataEntry; cdecl; external libllvm;
function LLVMGetInstructionParent(Inst: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetNextInstruction(Inst: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetPreviousInstruction(Inst: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMInstructionRemoveFromParent(Inst: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMInstructionEraseFromParent(Inst: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMDeleteInstruction(Inst: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetInstructionOpcode(Inst: TLLVMValueRef): TLLVMOpcode; cdecl; external libllvm;
function LLVMGetICmpPredicate(Inst: TLLVMValueRef): TLLVMIntPredicate; cdecl; external libllvm;
function LLVMGetFCmpPredicate(Inst: TLLVMValueRef): TLLVMRealPredicate; cdecl; external libllvm;
function LLVMInstructionClone(Inst: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMIsATerminatorInst(Inst: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetFirstDbgRecord(Inst: TLLVMValueRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMGetLastDbgRecord(Inst: TLLVMValueRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMGetNextDbgRecord(DbgRecord: TLLVMDbgRecordRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMGetPreviousDbgRecord(DbgRecord: TLLVMDbgRecordRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMGetNumArgOperands(Instr: TLLVMValueRef): dword; cdecl; external libllvm;
procedure LLVMSetInstructionCallConv(Instr: TLLVMValueRef; CC: dword); cdecl; external libllvm;
function LLVMGetInstructionCallConv(Instr: TLLVMValueRef): dword; cdecl; external libllvm;
procedure LLVMSetInstrParamAlignment(Instr: TLLVMValueRef; Idx: TLLVMAttributeIndex; Align: dword); cdecl; external libllvm;
procedure LLVMAddCallSiteAttribute(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; A: TLLVMAttributeRef); cdecl; external libllvm;
function LLVMGetCallSiteAttributeCount(C: TLLVMValueRef; Idx: TLLVMAttributeIndex): dword; cdecl; external libllvm;
procedure LLVMGetCallSiteAttributes(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; Attrs: PLLVMAttributeRef); cdecl; external libllvm;
function LLVMGetCallSiteEnumAttribute(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; KindID: dword): TLLVMAttributeRef; cdecl; external libllvm;
function LLVMGetCallSiteStringAttribute(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; K: pchar; KLen: dword): TLLVMAttributeRef; cdecl; external libllvm;
procedure LLVMRemoveCallSiteEnumAttribute(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; KindID: dword); cdecl; external libllvm;
procedure LLVMRemoveCallSiteStringAttribute(C: TLLVMValueRef; Idx: TLLVMAttributeIndex; K: pchar; KLen: dword); cdecl; external libllvm;
function LLVMGetCalledFunctionType(C: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetCalledValue(Instr: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetNumOperandBundles(C: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetOperandBundleAtIndex(C: TLLVMValueRef; Index: dword): TLLVMOperandBundleRef; cdecl; external libllvm;
function LLVMIsTailCall(CallInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetTailCall(CallInst: TLLVMValueRef; IsTailCall: TLLVMBool); cdecl; external libllvm;
function LLVMGetTailCallKind(CallInst: TLLVMValueRef): TLLVMTailCallKind; cdecl; external libllvm;
procedure LLVMSetTailCallKind(CallInst: TLLVMValueRef; kind: TLLVMTailCallKind); cdecl; external libllvm;
function LLVMGetNormalDest(InvokeInst: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetUnwindDest(InvokeInst: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
procedure LLVMSetNormalDest(InvokeInst: TLLVMValueRef; B: TLLVMBasicBlockRef); cdecl; external libllvm;
procedure LLVMSetUnwindDest(InvokeInst: TLLVMValueRef; B: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetCallBrDefaultDest(CallBr: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetCallBrNumIndirectDests(CallBr: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetCallBrIndirectDest(CallBr: TLLVMValueRef; Idx: dword): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetNumSuccessors(Term: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetSuccessor(Term: TLLVMValueRef; i: dword): TLLVMBasicBlockRef; cdecl; external libllvm;
procedure LLVMSetSuccessor(Term: TLLVMValueRef; i: dword; block: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMIsConditional(Branch: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetCondition(Branch: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMSetCondition(Branch: TLLVMValueRef; Cond: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetSwitchDefaultDest(SwitchInstr: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetAllocatedType(Alloca: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMIsInBounds(GEP: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetIsInBounds(GEP: TLLVMValueRef; InBounds: TLLVMBool); cdecl; external libllvm;
function LLVMGetGEPSourceElementType(GEP: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGEPGetNoWrapFlags(GEP: TLLVMValueRef): TLLVMGEPNoWrapFlags; cdecl; external libllvm;
procedure LLVMGEPSetNoWrapFlags(GEP: TLLVMValueRef; NoWrapFlags: TLLVMGEPNoWrapFlags); cdecl; external libllvm;
procedure LLVMAddIncoming(PhiNode: TLLVMValueRef; IncomingValues: PLLVMValueRef; IncomingBlocks: PLLVMBasicBlockRef; Count: dword); cdecl; external libllvm;
function LLVMCountIncoming(PhiNode: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetIncomingValue(PhiNode: TLLVMValueRef; Index: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetIncomingBlock(PhiNode: TLLVMValueRef; Index: dword): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMGetNumIndices(Inst: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetIndices(Inst: TLLVMValueRef): Pdword; cdecl; external libllvm;
function LLVMCreateBuilderInContext(C: TLLVMContextRef): TLLVMBuilderRef; cdecl; external libllvm;
function LLVMCreateBuilder: TLLVMBuilderRef; cdecl; external libllvm;
procedure LLVMPositionBuilder(Builder: TLLVMBuilderRef; Block: TLLVMBasicBlockRef; Instr: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMPositionBuilderBeforeDbgRecords(Builder: TLLVMBuilderRef; Block: TLLVMBasicBlockRef; Inst: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMPositionBuilderBefore(Builder: TLLVMBuilderRef; Instr: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMPositionBuilderBeforeInstrAndDbgRecords(Builder: TLLVMBuilderRef; Instr: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMPositionBuilderAtEnd(Builder: TLLVMBuilderRef; Block: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetInsertBlock(Builder: TLLVMBuilderRef): TLLVMBasicBlockRef; cdecl; external libllvm;
procedure LLVMClearInsertionPosition(Builder: TLLVMBuilderRef); cdecl; external libllvm;
procedure LLVMInsertIntoBuilder(Builder: TLLVMBuilderRef; Instr: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMInsertIntoBuilderWithName(Builder: TLLVMBuilderRef; Instr: TLLVMValueRef; Name: pchar); cdecl; external libllvm;
procedure LLVMDisposeBuilder(Builder: TLLVMBuilderRef); cdecl; external libllvm;
function LLVMGetCurrentDebugLocation2(Builder: TLLVMBuilderRef): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMSetCurrentDebugLocation2(Builder: TLLVMBuilderRef; Loc: TLLVMMetadataRef); cdecl; external libllvm;
procedure LLVMSetInstDebugLocation(Builder: TLLVMBuilderRef; Inst: TLLVMValueRef); cdecl; external libllvm;
procedure LLVMAddMetadataToInst(Builder: TLLVMBuilderRef; Inst: TLLVMValueRef); cdecl; external libllvm;
function LLVMBuilderGetDefaultFPMathTag(Builder: TLLVMBuilderRef): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMBuilderSetDefaultFPMathTag(Builder: TLLVMBuilderRef; FPMathTag: TLLVMMetadataRef); cdecl; external libllvm;
function LLVMGetBuilderContext(Builder: TLLVMBuilderRef): TLLVMContextRef; cdecl; external libllvm;
procedure LLVMSetCurrentDebugLocation(Builder: TLLVMBuilderRef; L: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetCurrentDebugLocation(Builder: TLLVMBuilderRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildRetVoid(para1: TLLVMBuilderRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildRet(para1: TLLVMBuilderRef; V: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildAggregateRet(para1: TLLVMBuilderRef; RetVals: PLLVMValueRef; N: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildBr(para1: TLLVMBuilderRef; Dest: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCondBr(para1: TLLVMBuilderRef; If_: TLLVMValueRef; Then_: TLLVMBasicBlockRef; Else_: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildSwitch(para1: TLLVMBuilderRef; V: TLLVMValueRef; Else_: TLLVMBasicBlockRef; NumCases: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildIndirectBr(B: TLLVMBuilderRef; Addr: TLLVMValueRef; NumDests: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCallBr(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; Fn: TLLVMValueRef; DefaultDest: TLLVMBasicBlockRef; IndirectDests: PLLVMBasicBlockRef;
  NumIndirectDests: dword; Args: PLLVMValueRef; NumArgs: dword; Bundles: PLLVMOperandBundleRef; NumBundles: dword;
  Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildInvoke2(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Fn: TLLVMValueRef; Args: PLLVMValueRef; NumArgs: dword;
  Then_: TLLVMBasicBlockRef; Catch: TLLVMBasicBlockRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildInvokeWithOperandBundles(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Fn: TLLVMValueRef; Args: PLLVMValueRef; NumArgs: dword;
  Then_: TLLVMBasicBlockRef; Catch: TLLVMBasicBlockRef; Bundles: PLLVMOperandBundleRef; NumBundles: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildUnreachable(para1: TLLVMBuilderRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildResume(B: TLLVMBuilderRef; Exn: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildLandingPad(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; PersFn: TLLVMValueRef; NumClauses: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCleanupRet(B: TLLVMBuilderRef; CatchPad: TLLVMValueRef; BB: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
